--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,80 @@ body {
     font-family: sans-serif;
     color: #fff;
     background: #000;
+    margin: 0;
 }
 img {
     max-width: 100%; /* DO NOT delete or change this line */
 }
+p {
+  max-width: 100%;
+}
+article {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1;
+}
+header {
+  background-color: #333;
+  padding: 2rem;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+}
+
+nav ul li {
+  margin: 0;
+  margin-left: 1rem;
+}
+
+footer {
+  background-color: #333;
+  margin: 0;
+  margin-bottom: 0;
+}
+
+#cougar {
+  background: #B26219;
+  padding: 1rem;
+  margin: 0;
+  margin-bottom: 0;
+}
+
+#lion{
+  background: #FFD5AE;
+  padding: 1rem;
+  margin: 0;
+  margin-bottom: 0;
+}
+#tiger{
+  background: #FFBD82;
+  padding: 1rem;
+  margin: 0;
+  margin-bottom: 0;
+}
+.photo{
+  max-width: 100%;
+}
+.text{
+  max-width: 100%;
+  background-color: #fff;
+  color: #000;
+  padding: 40px;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  margin: 150px 250px;
+}
+.text h2 {
+  text-align: center
+}
+
 
 /* ----- SUGGESTED COLORS -----
     - ARTICLES
